Fix text alignments; closes #214

--- a/frontend/ui/app/[locale]/home/(reasoning)/Reasoning.module.css
+++ b/frontend/ui/app/[locale]/home/(reasoning)/Reasoning.module.css
@@ -33,4 +33,8 @@
   .reasoning div:not(:last-of-type) {
     margin-bottom: 3rem;
   }
+
+  .reasoning_title_secondary {
+    padding: 0 2rem;
+  }
 }
